[package]
name = "rsjail"
description = "A pure Rust implementation of nsjail for secure sandboxing"
license = "MIT"
version = "0.0.0"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = [
  "sched",
  "process",
  "mount",
  "fs",
  "user",
  "resource",
  "hostname",
  "signal",
] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
